<resources>
    <string name="app_name">World Geography</string>

    <!-- GENERAL -->
    <string name="btnStart">Start</string>
    <string name="btnStatistics">Statistics</string>
    <string name="btnAchievements">Achievements</string>
    <string name="btnBack">Go Back</string>
    <string name="btnMainMenu">Main Menu</string>
    <string name="btnSettings">Settings</string>
    <string name="BackgroundContentDescription">A background image of the world map</string>
    <string name="tvLetsPlay">Let\'s play!</string>

    <!-- ACTIVITY: MainActivity -->
    <string name="MainMenuImageDescription">A globe of country flags</string>

    <!-- ACTIVITY: GameModesMenuActivity -->
    <string name="GameModeMenuTitle">Select a game mode</string>
    <string name="GameModeMenuChoiceFlags">Flags</string>
    <string name="GameModeMenuChoiceCapitals">Capitals</string>
    <string name="GameModeMenuChoiceCurrencies">Currencies</string>

    <!-- ACTIVITY: GameFlagsMenuActivity -->
    <string name="GameMenuTitle">Select a region</string>
    <string name="GameMenuChoiceWorld">World</string>
    <string name="GameMenuChoiceEuropean">Europe</string>
    <string name="GameMenuChoiceAsian">Asia</string>
    <string name="GameMenuChoiceAfrica">Africa</string>
    <string name="GameMenuChoiceNorthAmerica">North America</string>
    <string name="GameMenuChoiceSouthAmerica">South America</string>
    <string name="GameMenuChoiceOceania">Oceania</string>

    <!-- ACTIVITY: GameLobbyActivity -->
    <string name="GameLobbyTitle">How many flags do you want to learn?</string>

    <!-- ACTIVITY: GameActivity -->
    <string name="GameImageDescription">Flag of a country that user must guess</string>

    <!-- ACTIVITY: GameOverActivity -->
    <string name="GameOver">Game Over</string>
    <string name="CorrectGuesses">Correct</string>
    <string name="IncorrectGuesses">Incorrect</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- ACTIVITY: Settings -->
    <string name="switchDarkmode">Toggle dark mode</string>
    <string name="btnClearStatistics">Clear statistics</string>

    <!-- Game Mode Card -->
    <string name="GameModeCardTitleDefault">GameName</string>
    <string name="GameModeCardSecondaryTextDefault">QuestionHere</string>
    <string name="GameModeCardAction">Start</string>
    <string name="GameModeCardImageDescription">An image that is correlated to the game mode the card represents.</string>

    <!-- "Go back" dialog -->
    <string name="GoBackDialogTitle">Are you sure?</string>
    <string name="GoBackDialogSupportingText">Going back will lose you all progress!</string>
    <string name="GoBackDialogYes">Yes</string>
    <string name="GoBackDialogCancel">Cancel</string>
    <string name="image_country_flag">image_of_a_countries_flag</string>

</resources>